# OpenGL-Classroom-Simulation

./: CMakeLists.txt  LICENSE  README.md
assets/textures/: bench.dds  clock.dds  diffuse.dds  door.dds  fan.dds  floor.dds  glass.dds  greenboard.dds  pipe.dds  podium.dds  projector.dds  specular.dds  switch.dds  table.dds  wallfan.dds  walls.dds  window.dds
common/: controls.cpp  controls.hpp
shaders/: ShadowMapping.fragmentshader  ShadowMapping.vertexshader  SimpleTexture.fragmentshader
src/: main.cpp
